# Whatsapp_Backend_Rust

./: .env  Cargo.toml
logs/: myapp.log.2025-06-05  myapp.log.2025-06-06
src/: main.rs
src/models/: user.rs
src/services/: mod.rs
src/services/db/: connect_db.rs  create_group.rs  create_user.rs  mod.rs  models.rs
src/services/socket/: mod.rs  models.rs  soc_conn.rs
